--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.35",
+    "less-loader": "^5.0.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1",
     "screenfull": "^5.1.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
@@ -30,6 +33,7 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.0.2",
+    "css-loader": "^5.1.4",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -37,7 +41,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0",
+    "style-loader": "^2.0.0",
+    "stylus-loader": "^5.0.0",
     "typescript": "~3.9.3"
   }
 }
